--- a/school/elec_302/lab_01/lab_report_1.tex
+++ b/school/elec_302/lab_01/lab_report_1.tex
@@ -33,15 +33,15 @@
 \begin{center}
   \begin{tabular}{l r}
     Date Performed: & January 14, 2013 \\
-    Partners: & John Doe \\
-              & Charles Pittman \\
+    Partners: & Rawley Dent \\
+    & Charles Pittman \\
     Instructor: & Dr. Weatherford
   \end{tabular}
 \end{center}
 
 \pagebreak
 
-%\setlength\parindent{0pt} % Removes all indentation from paragraphs
+\setlength\parindent{0pt} % Removes all indentation from paragraphs
 
 \section{Introduction}
 Praesent congue faucibus turpis et cursus. Phasellus vitae nisi felis,
@@ -54,13 +54,13 @@ faucibus. Proin ac interdum risus. Duis nec lacus elit. Donec venenatis
 tristique diam, in sollicitudin dui laoreet nec.
 
 \begin{enumerate}{}{}
-\item State the theoretical principles or concepts that this experiment is
-  trying to prove.
-\item May also be to gain experience in using the lab equipment.
+  \item State the theoretical principles or concepts that this experiment is
+    trying to prove.
+  \item May also be to gain experience in using the lab equipment.
 \end{enumerate}
 
 \section{Circuit Tested}
-\begin{figure}[h!]
+\begin{figure}[h]
   \begin{center}
     \includegraphics[width=.8\textwidth]{test_circuit}
     \caption{Parallel RLC Circuit Configuration}
@@ -68,12 +68,12 @@ tristique diam, in sollicitudin dui laoreet nec.
   \end{center}
 \end{figure}
 
-\begin{table*}[h!]
+\begin{table}[h]
   \begin{center}
     \begin{tabular}{ccc}
       \hline
       R & L & C \\
-      \(\Omega\) & H & \(\mu\)F \\
+      $\Omega$ & H & $\mu$F \\
       \hline
       1200 & 0.8 & --- \\ 1200 & 0.8 & 2.2 \\ 1200 & 0.8 & 4.4 \\
       1200 & 0.8 & 8.8 \\ 1200 & 1.6 & --- \\ 1200 & 1.6 & 2.2 \\
@@ -83,7 +83,7 @@ tristique diam, in sollicitudin dui laoreet nec.
     \caption{RLC Values for circuit in Figure~\ref{test_circuit}}
     \label{testc_dat}
   \end{center}
-\end{table*}
+\end{table}
 
 \section{Procedure}
 Sed luctus lacinia sollicitudin. Praesent arcu sapien, accumsan et convallis
@@ -128,13 +128,13 @@ congue tortor porta euismod. Donec sit amet massa diam. Etiam sed mi eros,
 porta congue libero. Lor
 
 \begin{enumerate}{}{}
-\item Enough description that someone familiar with basic electrical
-  measurements could reproduce the experiment.
-\item Sequential
-\item Paragraph form is usually preferred.
-\item Write in past tense.
-\item Do not just copy the instruction lists in the lab assignments.
-\item Learn to be brief
+  \item Enough description that someone familiar with basic electrical
+    measurements could reproduce the experiment.
+  \item Sequential
+  \item Paragraph form is usually preferred.
+  \item Write in past tense.
+  \item Do not just copy the instruction lists in the lab assignments.
+  \item Learn to be brief
 \end{enumerate}
 
 \section{Calc}
@@ -142,8 +142,8 @@ porta congue libero. Lor
   \begin{center}
     \begin{tabular}{cccccccccc}
       \hline
-      R & L & C & I\(_1\) & E$_1$ & P & \(\theta\) & S & Q & p.f. \\
-      \(\Omega\) & H & \(\mu\)F & A & V & W & \(\circ\) & VA & VAR & \\
+      R & L & C & I$_1$ & E$_1$ & P & $\theta$ & S & Q & p.f. \\
+      $\Omega$ & H & $\mu$F & A & V & W & $\circ$ & VA & VAR & \\
       \hline
       1200 & 0.8 & --- & 0.210 & 60 & 4.56 &  68.77 & 12.58 & 11.73 & 0.36 \\
       1200 & 0.8 & 2.2 & 0.164 & 60 & 4.56 &  62.48 &  9.86 &  8.75 & 0.46 \\
@@ -160,13 +160,19 @@ porta congue libero. Lor
   \end{center}
 \end{table}
 
+\[\mathbf{P} = \mathbf{VI}\cos\theta \]
+\[\mathbf{Q} = \mathbf{VI}\sin\theta\]
+\[\mathbf{S} = \mathbf{VI}^*\]
+\[\mathbf{V} = \mathbf{IZ}\]
+\[\text{p.f.} = \cos\theta\]
+
 \section{Results}
 \begin{table}[h]
   \begin{center}
     \begin{tabular}{cccccccccc}
       \hline
-      R & L & C & I\(_1\) & E$_1$ & P & \(\theta\) & S & Q & p.f. \\
-      \(\Omega\) & H & \(\mu\)F & A & V & W & \(\circ\) & VA & VAR & \\
+      R & L & C & I$_1$ & E$_1$ & P & $\theta$ & S & Q & p.f. \\
+      $\Omega$ & H & $\mu$F & A & V & W & $\circ$ & VA & VAR & \\
       \hline
       1200 & 0.8 & --- & 0.206 & 60.9 & 4.53 &  68.0 & 12.55 & 11.21 & 0.37 \\
       1200 & 0.8 & 2.2 & 0.158 & 60.9 & 4.56 &  60.9 &  9.62 &  8.19 & 0.49 \\
@@ -196,45 +202,42 @@ Donec posuere vestibulum viverra. In vestibulum sem nisl. Donec eros tortor,
 ultrices a ullamcorper vitae, dapibus ac libero. Vivamus quis nisi elit, non
 venenatis urna. Donec porta dolor in ligula vehicula in vulputate ligula
 commodo. Donec viverra convallis felis, eget vulputate nunc lacinia eget. 
+
 \begin{enumerate}{}{}
-\item Measured values versus what would be predicted by a theoretical
-  analysis of the circuit performance.
-\item For example, compare the measured resistance of two resistors connected
-  in series with R\(_1 + \)R\(_2\)
-\item Express comparison as a \%error.
+  \item Measured values versus what would be predicted by a theoretical
+    analysis of the circuit performance.
+  \item For example, compare the measured resistance of two resistors connected
+    in series with R$_1 + $R($2$
+  \item Express comparison as a \%error.
 \end{enumerate}
 
-\[\text{\%deviation} = {\text{measured} - \text{theoretical}} \frac {\text{theoretical}} \times \text{100\%}\]
+\[\text{\%deviation} = {\text{measured} - \text{theoretical}} \frac
+  {\text{theoretical}} \times \text{100\%}\]
 
-    \section{Conclusions}
-    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
-    turpis egestas. Duis dui turpis, convallis ac hendrerit in, facilisis sed
-    lectus. Nulla facilisi. Aenean id nulla ante, sit amet venenatis eros.
+\section{Conclusions}
+Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
+turpis egestas. Duis dui turpis, convallis ac hendrerit in, facilisis sed
+lectus. Nulla facilisi. Aenean id nulla ante, sit amet venenatis eros.
 
-    Fusce orci nibh, pharetra id bibendum sit amet, porta id metus. Sed faucibus
-    ultricies ullamcorper. Class aptent taciti sociosqu ad litora torquent per
-    conubia nostra, per inceptos himenaeos. Suspendisse bibendum vestibulum metus
-    pellentesque gravida. Proin justo ligula, ultrices at faucibus at, blandit ut
-    libero. Fusce cursus commodo nisl, sit amet pretium velit dignissim quis. Cras
-    ut posuere felis.
+Fusce orci nibh, pharetra id bibendum sit amet, porta id metus. Sed faucibus
+ultricies ullamcorper. Class aptent taciti sociosqu ad litora torquent per
+conubia nostra, per inceptos himenaeos. Suspendisse bibendum vestibulum metus
+pellentesque gravida. Proin justo ligula, ultrices at faucibus at, blandit ut
+libero. Fusce cursus commodo nisl, sit amet pretium velit dignissim quis. Cras
+ut posuere felis.
 
-    Ut iaculis leo nec erat elementum elementum. Nam et purus nisl, in scelerisque
-    dolor. Vivamus velit sem, dapibus ut dictum a, eleifend sed mauris. Morbi in
-    bibendum sapien. Integer in lorem neque. Aenean mollis facilisis dolor, et
-    feugiat mi rhoncus vitae. Donec vestibulum lacus in dolor pharetra condimentum.
-    Maecenas condimentum cursus nulla nec consequat. Proin hendrerit consequat
-    pharetra. Suspendisse at sodales ligula.
+Proin suscipit porta sodales. Sed non massa sit amet dui condimentum convallis.
+Vestibulum vitae tincidunt dui. Mauris tincidunt, neque vel congue ornare, sem
+sapien eleifend urna, sit amet dictum neque orci id felis. Cras diam nunc,
+viverra interdum aliquam sit amet, blandit quis libero. Nunc eget odio
+scelerisque eros placerat auctor. Aliquam mattis tellus sed lacus sodales id
+molestie risus cursus.
 
-    Proin suscipit porta sodales. Sed non massa sit amet dui condimentum convallis.
-    Vestibulum vitae tincidunt dui. Mauris tincidunt, neque vel congue ornare, sem
-    sapien eleifend urna, sit amet dictum neque orci id felis. Cras diam nunc,
-    viverra interdum aliquam sit amet, blandit quis libero. Nunc eget odio
-    scelerisque eros placerat auctor. Aliquam mattis tellus sed lacus sodales id
-    molestie risus cursus.
 \begin{enumerate}{}
-\item What theoretical principle or concept did this experiment prove?
-\item Within experimental error, this laboratory exercise has demonstrated that
-the equivalent resistance of two resistors connected in series is equal to the
-sum of the individual values.
+  \item What theoretical principle or concept did this experiment prove?
+  \item Within experimental error, this laboratory exercise has demonstrated that
+    the equivalent resistance of two resistors connected in series is equal to the
+    sum of the individual values.
 \end{enumerate}
-    \end{document}
+
+\end{document}
