--- a/school/elec_302/lab_01/tex/lab_report_1.tex
+++ b/school/elec_302/lab_01/tex/lab_report_1.tex
@@ -31,32 +31,32 @@
 \maketitle
 
 \begin{center}
-  \begin{tabular}{l r}
+  \begin{tabular}{lr}
     Date Performed: & January 14, 2013 \\
     Partners: & Rawley Dent \\
-    & Charles Pittman \\
+              & Charles Pittman \\
     Instructor: & Dr. Weatherford
   \end{tabular}
 \end{center}
 
 \pagebreak
 
-\setlength\parindent{0pt} % Removes all indentation from paragraphs
+%\setlength\parindent{0pt} % Removes all indentation from paragraphs
 
 \section{Purpose of Experiment}
-In this experiment, an RLC circuit was modeled on an EMS workstation.
-The capacitance was varied for two different inductance values. The circuit
-was then analyzed to obtain measured values for the circuit power factor, real
-power, and apparent power. These measured results were then compared to the 
+In this experiment, an RLC circuit was modeled on an EMS workstation.  The
+capacitance was varied for two different inductance values. The circuit was
+then analyzed to obtain measured values for the circuit power factor, real
+power, and apparent power. These measured results were then compared to the
 theoretical values calculated beforehand. Familiarization with the EMS
-workstaton was also obtained.
+workstation was also obtained.
 
 \section{Circuit Tested}
 \begin{figure}[h]
   \begin{center}
     \includegraphics[width=.8\textwidth]{test_circuit}
     \caption{Parallel RLC Circuit Configuration}
-    \label{test_circuit}
+    \label{circuit_01}
   \end{center}
 \end{figure}
 
@@ -72,38 +72,37 @@ workstaton was also obtained.
       1200 & 1.6 & 4.4 \\ 1200 & 1.6 & 8.8 \\
       \hline
     \end{tabular}
-    \caption{RLC Values for circuit in Figure~\ref{test_circuit}}
+    \caption{RLC Values for circuit in Figure~\ref{circuit_01}}
     \label{testc_dat}
   \end{center}
 \end{table}
 
 \section{Procedure}
-At the EMS workstation, the main power switch of the Power Supply was 
-verified to be OFF, and the voltage control knob was verified to be 
-completely counterclockwise. The voltmeter selector switch was set to
-position 4-N. The RLC circuit shown in Figure 1 was modeled with the 
-capacitor left out at first. The elements labeled E1 and I1 on Figure 1
-refered to the ammeter and voltmeter Data Acquisition Interface (DAI)
-connections. The DAI 24-V supply was connected to the main Power Supply,
-and the DAI USB cable was connected to the PC workstation. The main power
-switch of the Power Supply was switched to ON.
+At the EMS workstation, the main power switch of the Power Supply was verified
+to be OFF, and the voltage control knob was verified to be completely
+counterclockwise. The voltmeter selector switch was set to position 4-N. The
+RLC circuit shown in Figure~\ref{circuit_01} was modeled with the capacitor
+left out at first. The elements labeled E$_1$ and I$_1$ on
+Figure~\ref{circuit_01} referred to the ammeter and voltmeter Data Acquisition
+Interface (DAI) connections. The DAI 24-V supply was connected to the main
+Power Supply, and the DAI USB cable was connected to the PC workstation. The
+main power switch of the Power Supply was switched to ON.
 
-On the PC, the Lab-Volt Data Acquisition Management application was
-started, and the file pertaining to the experiment being worked was 
-opened. Three windows (metering, oscilloscope, and phasor analyzer)
-were verified to open up along with the experiment file. The three 
-windows were set to continuously refresh.
+On the PC, the Lab-Volt Data Acquisition Management application was started,
+and the file pertaining to the experiment being worked was opened. Three
+windows (metering, oscilloscope, and phasor analyzer) were verified to open up
+along with the experiment file. The three windows were set to continuously
+refresh.
 
-The supply voltage was adjusted to read 24-V. Verification was obtained
-by monitoring the EMS analog voltmeter and the digital metering window
-on the PC. The load voltage E1, load current I1, the real power consumed 
-by the circuit, and the phase angle were recorded. In the Phasor Analyzer
-window, E1 was selected as the reference phasor. The voltage control knob 
-was then turn completely counterclockwise and the main power switch was 
-set to OFF.
+The supply voltage was adjusted to read 24-V. Verification was obtained by
+monitoring the EMS analog voltmeter and the digital metering window on the PC.
+The load voltage E$_1$, load current I$_1$, the real power consumed by the
+circuit, and the phase angle were recorded. In the Phasor Analyzer window,
+E$_1$ was selected as the reference phasor. The voltage control knob was then
+turn completely counterclockwise and the main power switch was set to OFF.
 
-The EMS workstation was then reconfigured to include the capacitance.
-The subsequent values included in Table 3 were then measured.
+The EMS workstation was then reconfigured to include the capacitance.  The
+subsequent values included in Table~\ref{meas_data} were then measured.
 
 \section{Calc}
 \begin{table}[h]
@@ -124,7 +123,7 @@ The subsequent values included in Table 3 were then measured.
       \hline
     \end{tabular}
     \caption{Calculated Data}
-    \label{calc_dat}
+    \label{calc_data}
   \end{center}
 \end{table}
 
@@ -153,7 +152,7 @@ The subsequent values included in Table 3 were then measured.
       \hline
     \end{tabular}
     \caption{Experimental Data}
-    \label{meas_dat}
+    \label{meas_data}
   \end{center}
 \end{table}
 
@@ -164,35 +163,37 @@ The subsequent values included in Table 3 were then measured.
       \hline
       R & L & C & I$_1$ & E$_1$ & P & $\theta$ & S & Q & p.f. \\
       \hline
-      0.0 & 0.0 & --- & 1.9 & 1.5 & 0.7 & 1.1 & 0.2 & 4.4 & 2.8 \\
-      0.0 & 0.0 & 0.0 & 3.7 & 1.5 & 0.0 & 2.5 & 2.4 & 6.4 & 6.5 \\
-      0.0 & 0.0 & 0.0 & 4.1 & 1.5 & 0.7 & 5.1 & 2.9 & 8.3 & 6.5 \\
-      0.0 & 0.0 & 0.0 & 6.6 & 1.7 & 2.0 & 65  & 8.3 & 71  & 0.0 \\
-      0.0 & 0.0 & --- & 1.8 & 1.7 & 16  & 8.1 & 3.5 & 94  & 100 \\
-      0.0 & 0.0 & 0.0 & 5.3 & 1.7 & 17  & 20  & 7.1 & 14  & 12  \\
-      0.0 & 0.0 & 0.0 & 18  & 1.7 & 18  & 1220& 21  & 1433& 0.0 \\
-      0.0 & 0.0 & 0.0 & 7.8 & 2.0 & 19  & 5.1 & 10  & 5.5 & 10  \\
+      0.0 & 0.0 & --- & 1.9 & 1.5 & 0.7 & 1.1  & 0.2 & 4.4  & 2.8 \\
+      0.0 & 0.0 & 0.0 & 3.7 & 1.5 & 0.0 & 2.5  & 2.4 & 6.4  & 6.5 \\
+      0.0 & 0.0 & 0.0 & 4.1 & 1.5 & 0.7 & 5.1  & 2.9 & 8.3  & 6.5 \\
+      0.0 & 0.0 & 0.0 & 6.6 & 1.7 & 2.0 & 65   & 8.3 & 71   & 0.0 \\
+      0.0 & 0.0 & --- & 1.8 & 1.7 & 16  & 8.1  & 3.5 & 94   & 100 \\
+      0.0 & 0.0 & 0.0 & 5.3 & 1.7 & 17  & 20   & 7.1 & 14   & 12  \\
+      0.0 & 0.0 & 0.0 & 18  & 1.7 & 18  & 1220 & 21  & 1433 & 0.0 \\
+      0.0 & 0.0 & 0.0 & 7.8 & 2.0 & 19  & 5.1  & 10  & 5.5  & 10  \\
+    \end{tabular}
+  \end{center}
+\end{table}
 
 \[\text{\%deviation} = \frac{measured - theoretical}{theoretical}\ \times \text{100\%}\]
 
 \section{Conclusions}
-The effects of different levels of capacitance were observed by 
-conducting this experiemnt. The theoretical values for real power, 
-apparent power, and the phase angle were calculated. Then, 
-the experiment was conducted to verify the effects of a parallel 
-RLC circuit. These measured results were differed from the theoretical
-results because of one underlying reason. The switch modeling the 
-inductance at the EMS workstation contained an internal impedance.
-This added impedance caused the calculted results to differ from the 
-measured. Also, one can see that the voltage measured at E1 fluctuating throughout
-the experiment. This fluctuation caused added variations between measured
-and theoretical. 
+The effects of different levels of capacitance were observed by conducting this
+experiment. The theoretical values for real power, apparent power, and the
+phase angle were calculated. Then, the experiment was conducted to verify the
+effects of a parallel RLC circuit. These measured results were differed from
+the theoretical results because of one underlying reason. The switch modeling
+the inductance at the EMS workstation contained an internal impedance.  This
+added impedance caused the calculated results to differ from the measured.
+Also, one can see that the voltage measured at E$_1$ fluctuating throughout the
+experiment. This fluctuation caused added variations between measured and
+theoretical.
 
-It was noted that row 8 of Tables 2 and 3 contained a negative angle for
-the phase impedance. This signified a highly capacitative load where the phase 
-current lead the phase voltage. All other loads were inductive, except in
-rows 4 and 7, where the load was slightly capacitative. In these rows, 4 and
-7, the power factor recorded as 1.0 signifiying an inuctive load efficiently 
-corrected by a capacitance.
+It was noted that row 8 of Tables~\ref{calc_data} and~\ref{meas_data} contained
+a negative angle for the phase impedance. This signified a highly capacitative
+load where the phase current lead the phase voltage. All other loads were
+inductive, except in rows 4 and 7, where the load was slightly capacitative. In
+these rows, 4 and 7, the power factor recorded as 1.0 signifying an inductive
+load efficiently corrected by a capacitance.
 
 \end{document}
