--- a/school/elec_302/lab_01/tex/lab_report_1.tex
+++ b/school/elec_302/lab_01/tex/lab_report_1.tex
@@ -159,19 +159,23 @@ subsequent values included in Table~\ref{meas_data} were then measured.
 \section{Comparison with Theoretical: Percent Deviation}
 \begin{table}[h]
   \begin{center}
-    \begin{tabular}{cccccccccc}
+    \begin{tabular}{|ccc||c|}
       \hline
-      R & L & C & I$_1$ & E$_1$ & P & $\theta$ & S & Q & p.f. \\
+      R & L & C & p.f. \\
+      $\Omega$ & H & $\mu$F & \% \\
       \hline
-      0.0 & 0.0 & --- & 1.9 & 1.5 & 0.7 & 1.1  & 0.2 & 4.4  & 2.8 \\
-      0.0 & 0.0 & 0.0 & 3.7 & 1.5 & 0.0 & 2.5  & 2.4 & 6.4  & 6.5 \\
-      0.0 & 0.0 & 0.0 & 4.1 & 1.5 & 0.7 & 5.1  & 2.9 & 8.3  & 6.5 \\
-      0.0 & 0.0 & 0.0 & 6.6 & 1.7 & 2.0 & 65   & 8.3 & 71   & 0.0 \\
-      0.0 & 0.0 & --- & 1.8 & 1.7 & 16  & 8.1  & 3.5 & 94   & 100 \\
-      0.0 & 0.0 & 0.0 & 5.3 & 1.7 & 17  & 20   & 7.1 & 14   & 12  \\
-      0.0 & 0.0 & 0.0 & 18  & 1.7 & 18  & 1220 & 21  & 1433 & 0.0 \\
-      0.0 & 0.0 & 0.0 & 7.8 & 2.0 & 19  & 5.1  & 10  & 5.5  & 10  \\
+      1200 & 0.8 & --- & 2.8 \\
+      1200 & 0.8 & 2.2 & 6.5 \\
+      1200 & 0.8 & 4.4 & 6.5 \\
+      1200 & 0.8 & 8.8 & 0.0 \\
+      1200 & 1.6 & --- & 100 \\
+      1200 & 1.6 & 2.2 & 12  \\
+      1200 & 1.6 & 4.4 & 0.0 \\
+      1200 & 1.6 & 8.8 & 10  \\
+      \hline
     \end{tabular}
+    \caption{Percent deviation}
+    \label{percent_dev}
   \end{center}
 \end{table}
 
