Moved lab 2 imgs to subdir

--- a/school/elec_302/lab_02/tex/lab_report_2.tex
+++ b/school/elec_302/lab_02/tex/lab_report_2.tex
@@ -56,7 +56,7 @@ the EMS workstation was also obtained.
 \subsection{Voltage Ratios}
 \begin{figure}[H]
   \centering
-  \includegraphics[width=.8\textwidth]{circuit_01}
+  \includegraphics[width=.8\textwidth]{img/circuit_01}
   \caption{Single Phase Transformer Circuit}
   \label{fig:circuit_01}
 \end{figure}
@@ -64,7 +64,7 @@ the EMS workstation was also obtained.
 \subsection{Current Ratio}
 \begin{figure}[H]
   \centering
-  \includegraphics[width=.8\textwidth]{circuit_02}
+  \includegraphics[width=.8\textwidth]{img/circuit_02}
   \caption{Single Phase Transformer Circuit}
   \label{fig:circuit_02}
 \end{figure}
@@ -72,7 +72,7 @@ the EMS workstation was also obtained.
 \subsection{Saturation}
 \begin{figure}[H]
   \centering
-  \includegraphics[width=.8\textwidth]{circuit_03}
+  \includegraphics[width=.8\textwidth]{img/circuit_03}
   \caption{Single Phase Transformer Circuit}
   \label{fig:circuit_03}
 \end{figure}
@@ -199,7 +199,7 @@ measured.
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width=.8\textwidth]{graph}
+  \includegraphics[width=.8\textwidth]{img/graph}
   \caption{Saturation Curve}
   \label{fig:graph}
 \end{figure}
