--- a/school/elec_302/lab_02/tex/lab_report_2.tex
+++ b/school/elec_302/lab_02/tex/lab_report_2.tex
@@ -154,6 +154,26 @@ clicked to display the saturation curve of the transformer core.
   \label{tab:volt_rat}
 \end{table}
 
+\begin{table}{H}
+  \centering
+  \begin{tabular}{cccc}
+    \hline
+    Winding & Nameplate Voltage & Measured Voltage & Percent Difference \\
+    \hline
+    3--4 & 208 & 207.2 & 0.38 \\
+    5--6 & 120 & 119.2 & 0.67 \\
+    7--8 & 76  & 75.8  & 0.26 \\
+    3--7 & 104 & 103.6 & 0.38 \\
+    8--4 & 28  & 27.8  & 0.71 \\
+    5--9 & 60  & 59.8  & 0.33 \\
+    9--6 & 60  & 59.7  & 0.50 \\
+  \end{tabular}
+  \caption{Comparison of Nameplate Secondary Voltages with Measured Values}
+  \label{tab:volt_rat}
+\end{table}
+
+\[\text{Percent Difference} = \frac{measured - nameplate}{nameplate}\ \times \text{100\%}\]
+
 \subsection{Current Ratio}
 \begin{table}[H]
   \centering
